--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest-watch-typeahead": "^0.6.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
+    "sass": "^1.37.5",
     "typescript": "^4.3.5"
   }
 }
