--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
     "sass": "^1.37.5",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.4.0"
   }
 }
