--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.19.0",
-    "husky": "^7.0.1",
+    "husky": "4.2.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.4",
     "jest-watch-typeahead": "^0.6.1",
