chore: add some stylelint plugins

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,14 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"]
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-recess-order",
+    "stylelint-config-sass-guidelines"
+  ],
+  "plugins": ["stylelint-scss"],
+  "rules": {
+    "at-rule-no-unknown": null,
+    "scss/at-rule-no-unknown": true,
+    "scss/dollar-variable-pattern": "^foo",
+    "scss/selector-no-redundant-nesting-selector": true
+  }
 }
