--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "paths": {
+      "@components/*": ["components/*"],
+    },
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "baseUrl": "src"
   },
