--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,7 +4,7 @@
   "rules": {
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
-    "scss/dollar-variable-pattern": "^foo",
+    "scss/dollar-variable-pattern": "^spaceamounts",
     "scss/selector-no-redundant-nesting-selector": true
   }
 }
