--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "paths": {
-      "@components/*": ["components/*"],
+      "@components/*": ["components/*"]
     },
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "baseUrl": "src"
