--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-jest": "^27.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.19.0",
     "husky": "4.2.3",
     "identity-obj-proxy": "^3.0.0",
