--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,6 +44,14 @@
       {
         "allow": ["warn", "error"]
       }
+    ],
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["hrefLeft", "hrefRight"],
+        "aspects": ["invalidHref", "preferButton"]
+      }
     ]
   }
 }
