--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "clsx": "^1.1.1",
-    "next": "latest",
+    "next": "^12.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
