chore: upgrade dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
         }
       }
     ],
-    "baseUrl": "src"
+    "baseUrl": "src",
+    "incremental": true
   },
   "exclude": ["node_modules", ".next", "out"],
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.js"]
